--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-body {
+.contenido {
   font-family:Verdana, Geneva, Tahoma, sans-serif;
   font-weight: 200;
   max-width: 900px;  
@@ -6,13 +6,19 @@ body {
   margin: 0 auto;
 }
 
-nav{
+.menu{
     width: 100%;
     height: 60px;
     background-color:rgb(12, 58, 95)
 }
 
-nav ul li{
+/*nav ul li{
+    list-style: none;
+    display: inline-block;    
+    padding: 5px 15px;    
+}*/
+
+.lista{
     list-style: none;
     display: inline-block;    
     padding: 5px 15px;    
@@ -44,23 +50,27 @@ a:active{
     font-size:larger;
 }
 
-nav ul{      
-    float:right;}
+/*nav ul{      
+    float:right;
+}*/
 
-    .imagen{
-        max-width: 50%;
-    }
+.opcion
+{
+    float: right;
+    margin-top: 10px;
+}
 
-    .titulo{
-        font-size:larger;
+.titulo{
+        font-size:larger;       
         margin-top: 20px;
+        font-weight: bold;
     }
 
 .imagen
 {
     width: 40%;        
-    margin-top: 14px;
-    height: 500px;
+    margin-top: 10px;
+    height: 480px;
 }
 
 .texto
@@ -69,6 +79,8 @@ nav ul{
     vertical-align: top;     
     padding-left: 15px;
     text-align: justify;
+    font-size: smaller;
+    margin-top: 10px;
 }
 
 .imagen, .texto{
@@ -82,13 +94,14 @@ nav ul{
 .precio
 {
     color: cornflowerblue;
-    font-weight: bold;    
+    font-size: 15px;
 }
 
 .total
 {
     color: cornflowerblue;
     font-weight: bold;
+    font-size: medium;
 }
 
 .linea
@@ -102,6 +115,7 @@ nav ul{
 .cantidad
 {
     margin-bottom: 0px;
+    font-size: 15px;
 }
 
 .libro{
@@ -113,11 +127,11 @@ nav ul{
     background-color:darkcyan;
     border: none;
     color: white;
-     padding: 10px 15px;
+    padding: 10px 15px;
     text-align: center;
     text-decoration: none;    
-    font-size: 16px;
-    margin-left: 62px;
+    font-size: 12px;
+    margin-left: 80px; 
 }
 
 .total, .boton{
